# bfi-v2

./: .env.local.example  .gitignore  README.md  SPEC.md  package-lock.json  package.json
agents/atlas/: README.md  __init__.py  __main__.py  agent.py  extractor.py  fetcher.py  pyproject.toml  storage.py  validator.py
agents/atlas/tests/: conftest.py  test_fetcher.py  test_storage.py  test_validator.py
agents/darwin/: README.md  __init__.py  __main__.py  agent.py  bounds.py  classifier.py  pyproject.toml  taxonomy.py
agents/darwin/tests/: test_bounds.py  test_classifier.py  test_extract_fees.py  test_taxonomy.py
agents/hamilton/: README.md  __init__.py  __main__.py  agent.py  data.py  prompts.py  pyproject.toml
agents/hamilton/templates/: category_deepdive.md.j2  institution_profile.md.j2  peer_benchmark.md.j2
agents/hamilton/tests/: test_data.py  test_prompts.py
agents/knox/: README.md  __init__.py  __main__.py  agent.py  checks.py  outliers.py  pyproject.toml
agents/knox/tests/: test_checks.py  test_outliers.py
agents/magellan/: README.md  __init__.py  __main__.py  agent.py  candidates.py  knowledge.py  pyproject.toml  scraper.py
agents/magellan/tests/: test_candidates.py  test_scraper.py
docs/marketing/: LAUNCH_ESSAY.md
docs/team/: CMO.md  COO.md  CTO.md  DATA_ANALYST.md  EXECUTIVE_SUMMARY.md  GTM_ANALYST.md  OPERATIONS_MANAGER.md  README.md  SEO_ANALYST.md  TECHNICAL_ARCHITECT.md
scripts/: fix-state-codes.mjs  ingest-state.mjs  seed-fresh.mjs
src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
src/app/about/: page.tsx
src/app/admin/: layout.tsx  page.tsx
src/app/admin/agents/: page.tsx
src/app/admin/data-quality/: page.tsx
src/app/admin/hamilton/: page.tsx
src/app/admin/hamilton/new/: generate-form.tsx  page.tsx
src/app/admin/institutions/: page.tsx
src/app/admin/institutions/[id]/: page.tsx
src/app/admin/leads/: page.tsx
src/app/admin/market/: page.tsx
src/app/admin/pipeline/: page.tsx  queue-bulk-form.tsx  trigger-form.tsx
src/app/admin/raw/: page.tsx
src/app/admin/raw/[id]/: page.tsx
src/app/admin/review/: page.tsx  queue-table.tsx
src/app/admin/review/[id]/: actions.tsx  page.tsx
src/app/admin/runs/: page.tsx
src/app/admin/runs/[runId]/: page.tsx
src/app/admin/states/: page.tsx
src/app/admin/states/[code]/: page.tsx
src/app/admin/taxonomy/unmapped/: page.tsx  promote-row.tsx
src/app/api/agents/cancel/: route.ts
src/app/api/agents/live/: route.ts
src/app/api/hamilton/generate/: route.ts
src/app/api/leads/: route.ts
src/app/api/pipeline/queue/: route.ts
src/app/api/pipeline/run/: route.ts
src/app/api/raw/[r2Key]/: route.ts
src/app/api/review/[id]/: route.ts
src/app/api/review/pending-count/: route.ts
src/app/api/search/: route.ts
src/app/api/taxonomy/promote/: route.ts
src/app/api/taxonomy/unmapped-count/: route.ts
src/app/banks/[slug]/: page.tsx
src/app/credit-unions/[slug]/: page.tsx
src/app/fees/[category]/: page.tsx
src/app/methodology/: page.tsx
src/app/reports/: page.tsx
src/app/states/[abbr]/: page.tsx
src/components/: command-palette.tsx  consumer-chrome.tsx  institution-profile.tsx  live-activity.tsx  newsletter-form.tsx  sidebar.tsx  state-map.tsx
src/components/dashboard/: hero-stats.tsx  pipeline-flow.tsx  stage-card.tsx  today-metrics.tsx
src/lib/: agent-procs.ts  db.ts  format.ts  queries.ts  r2.ts  site.ts  slug.ts  states.ts  us-map-paths.ts
supabase/migrations/: 20260525000000_baseline.sql  20260525000001_dedup_v1_fees_verified.sql  20260525000002_institutions_unique_name_state.sql  20260525000003_agent_knowledge.sql  20260525000004_data_cleaning.sql  README.md
