[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hamilton"
version = "0.1.0"
description = "Hamilton agent: LLM research analyst for Bank Fee Index"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "James Gilmore", email = "jlgilmore2@gmail.com" }]
dependencies = [
    "anthropic>=0.40",
    "jinja2>=3.1",
    "psycopg2-binary>=2.9",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
hamilton = "hamilton.__main__:main"

[tool.setuptools]
packages = ["hamilton"]
package-dir = {"hamilton" = "."}

[tool.setuptools.package-data]
hamilton = ["templates/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
