[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "magellan"
version = "0.1.0"
description = "Magellan agent: fee-schedule URL discovery for Bank Fee Index"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "James Gilmore", email = "jlgilmore2@gmail.com" }]
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "psycopg2-binary>=2.9",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
magellan = "magellan.__main__:main"

[tool.setuptools]
packages = ["magellan", "magellan.tests"]
package-dir = {"magellan" = ".", "magellan.tests" = "tests"}

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
